4.1
 * Streaming sessions longer than 3 minutes fail with timeout (CASSANDRA-17510)
 * Add ability to track state in repair (CASSANDRA-15399)
 * Remove unused 'parse' module (CASSANDRA-17484)
 * reduce hot-path object allocations required to record local/remote requests against the client request metrics (CASSANDRA-17424)
 * Disallow removing DC from system_auth while nodes are active in the DC (CASSANDRA-17478)
 * Add guardrail for the number of fields per UDT (CASSANDRA-17385)
 * Allow users to change cqlsh history location using env variable (CASSANDRA-17448)
 * Add required -f option to use nodetool verify and standalone sstableverify (CASSANDRA-17017)
 * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
 * Log largest memtable flush at info instead of debug (CASSANDRA-17472)
 * Add native transport rate limiter options to example cassandra.yaml, and expose metric for dispatch rate (CASSANDRA-17423)
 * Add diagnostic events for guardrails (CASSANDRA-17197)
 * Pre hashed passwords in CQL (CASSANDRA-17334)
 * Increase cqlsh version (CASSANDRA-17432)
 * Update SUPPORTED_UPGRADE_PATHS to include 3.0 and 3.x to 4.1 paths and remove obsolete tests (CASSANDRA-17362)
 * Support DELETE in CQLSSTableWriter (CASSANDRA-14797)
 * Failed inbound internode authentication failures generate ugly warning with stack trace (CASSANDRA-17068)
 * Expose gossip information in system_views.gossip_info virtual table (CASSANDRA-17002)
 * Add guardrails for collection items and size (CASSANDRA-17153)
 * Improve guardrails messages (CASSANDRA-17430)
 * Remove all usages of junit.framework and ban them via Checkstyle (CASSANDRA-17316)
 * Add guardrails for read/write consistency levels (CASSANDRA-17188)
 * Add guardrail for SELECT IN terms and their cartesian product (CASSANDRA-17187)
 * remove unused imports in cqlsh.py and cqlshlib (CASSANDRA-17413)
 * deprecate property windows_timer_interval (CASSANDRA-17404)
 * Expose streaming as a vtable (CASSANDRA-17390)