@@ -18,10 +18,9 @@
 
 package org.apache.cassandra.distributed.upgrade;
 
-import java.io.IOException;
 import java.util.Arrays;
 
-import org.apache.commons.lang.exception.ExceptionUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Assert;
 import org.junit.Test;
